Fix unwanted css that disabled the scrollbar

--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -5,8 +5,6 @@ html, body {
   margin: 0;
   height: 100%;
   width: 100%;
-  overflow: hidden;
-  position: fixed;
 }
 
 .btn-primary.predictionSel {
